<resources>
    <string name="app_name">Angkotin</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="example_gma">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="haaland">Haaland</string>
    <string name="nik">NIK</string>
    <string name="_0001001110001110">0001001110001110</string>
    <string name="greet">Hello</string>
    <string name="welcome">Selamat Datang di Angkotin</string>
    <string name="cari_angkot">Cari Angkot</string>
    <string name="rute_angkot">Rute Angkot</string>
    <string name="bantuan">Bantuan</string>
    <string name="akunku">Akunku</string>

    <string-array name="role">
        <item>Penumpang</item>
        <item>Supir Angkot</item>
    </string-array>
    <string name="detail_rute">Detail Rute</string>
    <string name="filter_rute">Filter Rute</string>
    <string name="dummy_app_bar">Ivana Cajiba, Jl. Mahakam</string>
    <string name="pilih_angkot_yang_terdekat_dengan_lokasi_kamu">Pilih Angkot yang terdekat dengan lokasi kamu</string>
    <string name="ubah_lokasi">Ubah Lokasi</string>
    <string name="naik">Naik</string>

    <string-array name="filter_rute">
        <item>GL</item>
        <item>AG</item>
        <item>AGL</item>
        <item>LDG</item>
        <item>GM</item>
    </string-array>

    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="_081234567890">081234567890</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="tab_text_1">Penumpang</string>
    <string name="tab_text_2">Supir Angkot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teks_warning_klik_angkot">Klik Angkot yang kamu pilih untuk melakukan perjalanan.</string>
    <string name="oke">Oke</string>
    <string name="lihat_rute">Lihat Rute</string>
    <string name="nomor_plat">Nomor Plat</string>
    <string name="kode_angkot">Kode Angkot</string>
    <string name="tujuan_akhir">Tujuan Akhir</string>
    <string name="jarak_ke_lokasimu">Jarak ke lokasimu</string>
    <string name="estimasi_waktu">Estimasi waktu</string>
    <string name="_0_5_km">0.5 Km</string>
    <string name="pilih_di_peta">Pilih di peta</string>
    <string name="batal">Batal</string>
    <string name="sub_info_menunggu">Harap menunggu, Angkot sedang menuju ke lokasimu.</string>
    <string name="find_place">Cari Lokasi</string>
    <string name="sub_penumpang_naik">Angkot sudah sampai, ayo naik sekarang</string>
    <string name="turun">Turun</string>
    <string name="jl_patimura">Jl. Patimura</string>
    <string name="jl_trunojoyo">Jl. Trunojoyo</string>
    <string name="terimakasih">Terimakasih telah menggunakan Angkotin teman perjalanan kamu</string>
    <string name="keluar">Keluar</string>
    <string name="kembali_ke_home">Kembali ke Home</string>

</resources>