<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="30dp"
        style="@style/Headline"
        android:text="@string/daftar"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Body_3_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="50dp"
        android:text="@string/nama"
        android:textColor="@color/neutral_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/haaland"
        android:paddingStart="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Body_3_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="22dp"
        android:text="@string/nomor_handphone"
        android:textColor="@color/neutral_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_nama" />

    <EditText
        android:id="@+id/edt_nomorHp"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/_081234567890"
        android:paddingStart="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Body_3_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="22dp"
        android:text="@string/password"
        android:textColor="@color/neutral_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_nomorHp" />

    <EditText
        android:id="@+id/edt_password_daftar"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/password"
        android:paddingStart="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Body_3_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="22dp"
        android:text="@string/konfirmasi_password"
        android:textColor="@color/neutral_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_daftar" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="numberPassword"
        android:hint="@string/konfirmasi_password"
        android:paddingStart="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_daftar"
        style="@style/Button_Big"
        android:layout_width="344dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/daftar"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Body_3_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_daftar" />

    <TextView
        android:id="@+id/link_daftar"
        style="@style/Body_3_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/daftar"
        android:textColor="@color/blue_500"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>