<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/user_detail"
            style="@style/Body_2_Open_Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            tools:text="Ben Parker, 45" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/Body_4_Open_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomor_plat" />

        <TextView
            style="@style/Body_4_Open_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/kode_angkot" />

        <TextView
            style="@style/Body_4_Open_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tujuan_akhir" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_plat"
            style="@style/Body_3_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="N 1234 AB" />

        <TextView
            style="@style/Body_3_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            tools:text="AL" />

        <TextView
            style="@style/Body_3_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Landungsari" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/Body_4_Open_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/jarak_ke_lokasimu" />

        <TextView
            style="@style/Body_4_Open_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimasi_waktu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/Body_3_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            tools:text="0.5 Km" />

        <TextView
            style="@style/Body_3_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="12 Menit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_batal"
            style="@style/Button_Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_button_outline"
            android:text="@string/batal"
            android:textColor="@color/blue_500"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/button_naik"
            style="@style/Button_Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:background="@drawable/background_button_fill"
            android:text="@string/naik"
            app:backgroundTint="@null" />
    </LinearLayout>

</LinearLayout>