<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        style="@style/Body_2_Open_Regular"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/terimakasih"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_logover4"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btn_kembali"
        style="@style/Button_Big"
        android:layout_width="344dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/kembali_ke_home"
        android:layout_weight="1"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button_keluar"
        style="@style/Button_Big"
        android:layout_width="344dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_button_outline"
        android:text="@string/keluar"
        android:textColor="@color/blue_500"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/btn_kembali"
        app:layout_constraintStart_toStartOf="@+id/btn_kembali"
        app:layout_constraintTop_toBottomOf="@+id/btn_kembali" />

</androidx.constraintlayout.widget.ConstraintLayout>